Add and removed exports - JSON, csv, CatalogSearch - associated records
